feat: git and eslint changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
-/node_modules
-/out
-/include
+node_modules/
+out/
+include/
 *.tsbuildinfo
+flamework.build
+.eslintcache
+
+# Misc
+.DS_Store
+
+/dist
+sourcemap.json
+*.rbxl.lock
+*.rbxl
+*.rbxlx
+
+.env
+
+.vscode/mise-tools/
