--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -11,10 +11,10 @@ trustPolicy: no-downgrade
 
 trustPolicyExclude:
   - semver@6.3.1
-
+  - eslint-config-prettier@9.1.2
 packages:
   - src
-
+  - test
 catalogs:
   build:
     roblox-ts: ^3.0.0
@@ -27,7 +27,17 @@ catalogs:
     eslint-plugin-react-naming-convention: ^2.5.1
     eslint-plugin-react-roblox-hooks: 5.1.0-rbx.1
     eslint-plugin-react-x: ^2.5.1
+    lint-staged: 16.2.6
+  peer:
+    "@rbxts/react": 17.3.0-alpha.1
+    "@rbxts/react-roblox": 17.3.0-alpha.1
+  prod:
+    "@rbxts/luau-polyfill": ^1.1.3
   script:
+    "@commitlint/cli": ^20.3.0
+    "@commitlint/config-conventional": ^20.3.0
+    "@commitlint/types": ^20.2.0
+    husky: ^9.1.7
     jiti: ^2.6.1
   types:
     "@isentinel/tsconfig": ^1.2.0
