--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 	"extends": "@isentinel/tsconfig/roblox",
 	"compilerOptions": {
 		"baseUrl": "src",
+		"paths": {},
 		"types": ["types/plugin"],
 		"declaration": true
 	},
