--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,5 @@
 		"types": ["types/plugin"],
 		"declaration": true
 	},
-	"exclude": ["test/", "node_modules/", "out/", "docs/"]
+	"exclude": ["test/", "node_modules/", "out/", "docs/", "eslint.config.ts"]
 }
