--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,5 +1,4 @@
 {
-	"extends": "@isentinel/tsconfig/typescript",
-	"include": ["**/*", ".vitepress/**/*"],
-	"exclude": ["node_modules"]
+	"extends": "../tsconfig.options.json",
+	"include": ["**/*", ".vitepress/**/*"]
 }
